Quick fix to h1 text color on the about page in dark mode

--- a/frontend/src/pages/About/About.module.scss
+++ b/frontend/src/pages/About/About.module.scss
@@ -2,7 +2,7 @@
     
     > h1 {
         background-color: $blue;
-        color: white;
+        color: white !important;
         padding: 0.5em 0 0.5em 0;
         text-align: center;
         display: flex;
